--- a/reports/skjern_weight.Rmd
+++ b/reports/skjern_weight.Rmd
@@ -28,20 +28,223 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   warning=FALSE, message=FALSE, 
-  include = TRUE, echo = TRUE, 
+  include = TRUE, echo = FALSE, 
   cache =FALSE, autodep = TRUE,
   out.width = "99%", fig.width = 8, fig.align = "center", fig.asp = 0.62
 )
 ```
 
+Factors that have an impact on the weight of a fish could be length, sex, number of days in the river etc. Moreover, info about the condition may help (e.g. kelt). A simple model with [weight as function of length](https://en.wikipedia.org/wiki/Standard_weight_in_fish) suggest that there is a polynomial relationship between weight and length.
+
+
+# Salmon
+
+```{r Read, include=FALSE}
+prefix <- "https://raw.githubusercontent.com/relund/skjern/master/data/"
+datCatchSalmon <- read_csv(paste0(prefix,"data_skjern_catch_salmon.csv")) 
+dat <- datCatchSalmon %>% 
+  filter(Length > 39 & !is.na(Weight) & Killed) %>% 
+  select(Date, Length, Weight, Sex, Cut, Kelt) %>% 
+  mutate(Month = month(Date, label = T), Quarter = paste0("Q",quarter(Date))) %>% 
+  mutate(Sex = case_when(
+    Sex == "Hun" ~ "Female",
+    Sex == "Han" ~ "Male",
+    TRUE ~ NA_character_
+  )) %>% 
+  arrange(Date)
+datKelt <- dat %>% 
+  filter(Kelt == "Ja") %>% 
+  select(-Kelt)
+dat <- dat %>% 
+  filter(Kelt != "Ja") %>% 
+  select(-Kelt)
+```
+
+We consider salmon catch records from Skjern Å from 2004 to present with both weight and length numbers. A total of `r nrow(dat)` observations with distribution:
+
+```{r}
+ggplot(dat, aes(x = Month)) + geom_bar(aes(y = (..count..)/sum(..count..))) + 
+  geom_text(aes(label = scales::percent(round((..count..)/sum(..count..),2)),
+                y = (..count..)/sum(..count..)), stat= "count", vjust = -.5) +
+  labs(y = "Percent")
+```
+
+Note we don't have to many observations for months where the qouta is closed. 
+
+## Kelt model
+
+Kelts are considered separately (`r nrow(datKelt)` observations). A kelt indicate a fish that have been a long time in the river. Hence, we don't use month as a factor in the model. Let us have a closer look at the data (`r nrow(datKelt)` observations):
+
+```{r}
+ggplot(datKelt, aes(x = Length, y = Weight, color = Sex)) +
+  geom_point() +
+  stat_summary(fun=mean, geom="line") +
+  labs(title = "Weight given length and mean lines")
+```
+
+We would expect that a female fish loose more weight (the eggs) than a male and we fit `log(Weight) ~ Sex*log(Length)`
+
+```{r Kelt model1}
+modKelt1 <- lm(log(Weight) ~ Sex*log(Length), datKelt)
+summary(modKelt1)
+datP <- expand.grid(Length = 40:145, Sex = c("Female","Male"), Kelt = T, MonthM2 = NA)
+resKelt1 <- predict(modKelt1, datP, interval='prediction', level=0.95) %>% 
+  exp() %>% 
+  as_tibble() %>% 
+  add_column(datP) %>% 
+  rename("Avg" = "fit" , "Lower" = "lwr", "Upper" = "upr") %>% 
+  pivot_longer(1:3)
+ggplot(datKelt %>% filter(Sex != "Unknown"), aes(x = Length, y = Weight, color = Sex)) + 
+  geom_point() + 
+  geom_line(aes(x = Length, y = value, linetype = name, color = Sex), data = resKelt1)  +
+  labs(title = "Kelt model: log(Weight) ~ Sex*log(Length)", linetype = "Estimates") +
+  theme(legend.position="bottom") 
+```
+
+Note we have to few observations for estimating higher weights for males for large lengths. Maybe a model without sex is a better fit:
+
+```{r Kelt model2}
+datP <- expand.grid(Length = 40:145, Sex = NA_character_, Kelt = T, MonthM2 = NA)
+modKelt2 <- lm(log(Weight) ~ log(Length), datKelt)
+summary(modKelt2)
+resKelt2 <- predict(modKelt2, datP, interval='prediction', level=0.95) %>% 
+  exp() %>% 
+  as_tibble() %>% 
+  add_column(datP) %>% 
+  rename("Avg" = "fit" , "Lower" = "lwr", "Upper" = "upr") %>% 
+  pivot_longer(1:3)
+ggplot(datKelt, aes(x = Length, y = Weight)) + 
+  geom_point() + 
+  geom_line(aes(x = Length, y = value, linetype = name), data = resKelt2)  +
+  labs(title = "Kelt model: log(Weight) ~ log(Length)", linetype = "Estimates") +
+  theme(legend.position="bottom") 
+```
+
+The Akaike information criterion (AIC) is a good test for model fit. AIC calculates the information value of each model by balancing the variation explained against the number of parameters used. We compare the information value of each model and choose the one with the lowest AIC value (a lower number means more information explained!)
+
+```{r}
+library(AICcmodavg)
+models <- list(modKelt1, modKelt2)
+aictab(models, modnames = c("With sex", "Without sex"))
+```
+
+It seems that model 1 is best. That is, if sex is known then include it in the model. 
+
+```{r}
+datKeltE <- bind_rows(resKelt1, resKelt2)
+ggplot(datKeltE %>% filter(name == "Avg")) + 
+  geom_line(aes(x = Length, y = value, color = Sex))  +
+  labs(title = "Kelt model: log(Weight) ~ Sex*log(Length)", linetype = "Estimates") +
+  theme(legend.position="bottom") 
+```
+
+
+
+## Salmon (kelts excluded)
+
+```{r}
+ggplot(dat, aes(x = Length, y = Weight, color = Month)) +
+  geom_jitter(alpha = 0.3) + 
+  labs(title = "Weight given Length") + 
+  guides(alpha = FALSE)
+```
+
+It is clear to see that the biggest salmon in general arrive early (>= 80 cm) and the grilse later (< 80 cm). 
+
+Let us try to visualize the effect of month:
+
+```{r}
+ggplot(dat, aes(x = Length, y = Weight, color = Month)) +
+  geom_smooth(se = F, size = 0.5) + 
+  facet_grid(cols = vars(Sex)) + 
+  labs(title = "Weight given Length") + 
+  guides(alpha = FALSE)
+```
+
+It seems that month may be used as an indicator for how long the salmon have been in the river.
+
+```{r}
+res <- dat %>% mutate(Length = round(Length)) %>% group_by(Month, Length, Sex) %>% summarise(`Mean weight` = mean(Weight)) %>% arrange(Length)
+# ggplot(res, aes(x = Length, y = `Mean weight`, color = Month)) +
+#   geom_point() +
+#   facet_wrap(vars(Sex)) + 
+#   labs(title = "Mean weight over months", color = "Length")
+ggplot(res, aes(x = Month, y = `Mean weight`)) +
+  geom_line(aes(group = factor(Length), color = factor(Length)), na.rm = T) +
+  facet_wrap(vars(Sex)) + 
+  labs(title = "Mean weight over months") +
+  guides(color = guide_legend("Length", nrow = 4, byrow = TRUE)) + 
+  theme(legend.position = "bottom")
+```
+
+In general weight goes down as months goes by which indicate that month may have an impact on weight.
+
+We fit some models taking month (a factor) into account:
+
+```{r, echo=TRUE}
+dat <- dat %>% mutate(MonthM2 = factor(Month, ordered = F))
+mod1 <- lm(log(Weight) ~ Sex*Month*log(Length), dat)
+mod2 <- lm(log(Weight) ~ Sex*MonthM2*log(Length), dat)
+mod3 <- lm(log(Weight) ~ MonthM2*log(Length), dat)
+mod4 <- lm(log(Weight) ~ Month*log(Length) + Sex, dat)
+mod5 <- lm(log(Weight) ~ Sex*log(Length) + Month, dat)
+mod6 <- lm(log(Weight) ~ log(Length) + Month, dat)
+mod7 <- lm(log(Weight) ~ Month*log(Length) + Cut, dat)
+mod8 <- lm(log(Weight) ~ Quarter*log(Length), dat)
+mod9 <- lm(log(Weight) ~ Cut*Month*log(Length), dat)
+aictab(list(mod1, mod2, mod3, mod4, mod5, mod6, mod7, mod8, mod9))
+```
+
+Sex don't have a large effect here since model 3 provides the best fit. 
+
+```{r}
+# datP <- expand.grid(Length = 40:145, Month = unique(dat$Month), Sex = c("Male", "Female"))
+# res1 <- predict(mod1, datP, interval='prediction', level=0.95) %>% 
+#   exp() %>% 
+#   as_tibble() %>% 
+#   add_column(datP, .before = T) %>% 
+#   rename("Avg" = "fit" , "Lower" = "lwr", "Upper" = "upr")
+# ggplot(res1, aes(x = Length, y = Avg)) + 
+#   geom_line(aes(color = Month, linetype = Sex)) +
+#   facet_wrap(vars(Month))
+#   labs(title = "Model: log(Weight) ~ Sex*Month*log(Length)") +
+#   ylab("Weight") + theme(legend.position="bottom") + 
+#   scale_color_brewer(palette = "Set1")
+
+datP <- expand.grid(Length = 40:145, MonthM2 = unique(dat$MonthM2), Kelt = F)
+res3 <- predict(mod3, datP, interval='prediction', level=0.95) %>% 
+  exp() %>% 
+  as_tibble() %>% 
+  add_column(datP, .before = T) %>% 
+  rename("Avg" = "fit" , "Lower" = "lwr", "Upper" = "upr")
+ggplot(res3, aes(x = Length, y = Avg)) + 
+  geom_line(aes(color = MonthM2)) +
+  labs(title = "Model: log(Weight) ~ Month*log(Length)") +
+  ylab("Weight") + theme(legend.position="bottom") + 
+  scale_color_brewer(palette = "Set1")
+resL3 <- pivot_longer(res3, 4:6)
+```
+
+```{r}
+datE <- bind_rows(datKeltE, resL3)
+```
+
+
 # Seatrout
 
 ```{r Read data}
 prefix <- "https://raw.githubusercontent.com/relund/skjern/master/data/"
-datCatchTrout <- read_csv(paste0(prefix,"data_skjern_catch_seatrout.csv")) %>% 
+datCatchTrout <- read_csv(paste0(prefix,"data_skjern_catch_seatrout.csv")) 
+dat <- datCatchTrout %>% 
+  filter(Length > 39 & !is.na(Weight) & Killed) %>% 
+  select(Date, Length, Weight, Sex) %>% 
   mutate(Month = month(Date, label = T), Quarter = paste0("Q",quarter(Date))) %>% 
+  mutate(Sex = case_when(
+    Sex == "Hun" ~ "Female",
+    Sex == "Han" ~ "Male",
+    TRUE ~ NA_character_
+  )) %>% 
   arrange(Date)
-dat <- dplyr::filter(datCatchTrout, Length > 39 & !is.na(Weight) & Killed)
 ```
 
 We consider seatrout catch records from Skjern Å from 2004 to present with both weight and length numbers. A total of `r nrow(dat)` observations:
@@ -52,100 +255,12 @@ ggplot(dat, aes(x = Month)) + geom_bar(aes(y = (..count..)/sum(..count..))) +
                    y = (..count..)/sum(..count..)), stat= "count", vjust = -.5) 
 ```
 
+We try different models:
 
-## Model 1: log(Weight) ~ log(Length)
-
-Let us first try a simple model with [weight as function of length](https://en.wikipedia.org/wiki/Standard_weight_in_fish):
-
-```{r Model 1: log(Weight) ~ log(Length)}
-mod1 <- lm(log(Weight) ~ log(Length), dat)
-summary(mod1)
-lim <- 40:max(dat$Length)
-res1 <- predict(mod1, data.frame(Length = lim), interval='prediction', level=0.95)
-res1 <- exp(res1)
-res1 <- res1 %>% as_tibble() 
-res1 <- res1 %>% add_column(Length = lim, .before = T)
-colnames(res1) <- c("Length", "Avg", "Lower", "Upper")
-res1 <- res1 %>% mutate(Fulton = Avg*100000/Length^3)
-res1L <- pivot_longer(res1, 2:4)
-pW <- ggplot(dat, aes(x = Length, y = Weight)) + 
-  geom_point(aes(color = Quarter), na.rm = T) + 
-  geom_line(aes(x = Length, y = value, linetype = name), data = res1L)  +
-  # guides(color=guide_legend(override.aes = list(shape=NA))) +
-  # scale_color_gradientn(colours = rainbow(4)) +
-  labs(title = "Model 1: log(Weight) ~ log(Length)", linetype = "Estimates") +
-  theme(legend.position="bottom") 
-pW
-```
-
-The estimated formula for weight ($w$) of a seatrout as a funtion of length ($l$) becomes:
-
-$$ v = `r round(exp(mod1$coefficients[1]),8)` \cdot l^{`r round(mod1$coefficients[2],2)`}$$
-
-<!-- Estimates with 95% confidence intervals are: -->
-
-<!-- ```{r} -->
-<!-- DT::datatable( -->
-<!--     res1, -->
-<!--     class = 'stripe row-border order-column nowrap', # nowrap display compact -->
-<!--     rownames = FALSE, -->
-<!--     options = list(pageLength = 15), -->
-<!--     extensions = c('Responsive') -->
-<!--   ) %>%  -->
-<!--   formatCurrency(c('Avg','Lower','Upper'), digits = c(2,2,2), currency = " kg", before = F) %>%  -->
-<!--   formatCurrency(c('Fulton'), digits = c(2), currency = "") -->
-<!-- ``` -->
-
-<!-- Note that the condition factor for average weight value is quite constanct ([`r str_c(range(round(res1$Fulton,2)), collapse = ",")`]) and increasing with lenght. Moreover, the weights in the plot of the quarters seem to differ. This holds with the biology of the trout.   -->
-
-## Model 2: lm(log(Weight) ~ Month*log(Length)
-
-<!-- Let us have a closer look at the data: -->
-<!-- ```{r} -->
-<!-- res <- dat %>% mutate(Length = round(Length)) %>% group_by(Month, Length) %>% summarise(`Mean weight` = mean(Weight)) %>% arrange(Length) -->
-<!-- ggplot(res, aes(x = Month, y = `Mean weight`)) +  -->
-<!--   geom_line(aes(group = factor(Length), color = factor(Length)), na.rm = T) + -->
-<!--   labs(title = "Mean weight over months", color = "Length")  -->
-<!-- ``` -->
-
-<!-- It is hard to see when weights are highest. -->
-
-<!-- For medium lengths, weight goes up, peak and goes down again as expected. In March/April we still have kelts in the river and then fresh fish arrives (best condition/weight) which loose weight at they stay in the river. Note for small lengths (up to 50 cm) the difference is small; because, small fish may have other reasons than spawning for staying in the river (e.g. feeding or bad conditions in the fjord).  -->
-
-We fit a model taking month into account:
-
-```{r Model 2: log(Weight) ~ Month*log(Length)}
-dat <- dat %>% mutate(MonthM2 = factor(Month, ordered = F))
-mod2 <- lm(log(Weight) ~ MonthM2*log(Length), dat)
-summary(mod2)
-datP <- expand.grid(Length = 40:max(dat$Length), MonthM2 = unique(dat$MonthM2))
-res2 <- predict(mod2, datP, interval='prediction', level=0.95)
-res2 <- exp(res2)
-res2 <- res2 %>% as_tibble()
-res2 <- bind_cols(datP, res2) %>% as_tibble()
-colnames(res2) <- c("Length", "Month", "Avg", "Lower", "Upper")
-ggplot(res2, aes(x = Length, y = Avg)) + 
-  geom_line(aes(group = Month, color = Month)) +
-  labs(title = "Model 2: log(Weight) ~ Month*log(Length)") +
-  ylab("Weight") + theme(legend.position="bottom") + 
-  scale_color_brewer(palette = "Set1")
-```
-
-Note May seem to be the first month of arriving trouts. The weight for April is lower due to some to the trouts cauth are kelts. We compare the two models:
-
-```{r}
-print(anova(mod1,mod2))
-```
- 
-Model 2 provides a better fit (the lowest RSS). 
-
-
-## Reducing Months
-
-Since the trout may arrive to the river in different months, we may try to group some of the months. We test different models both with month as numeric and factor. Based on the above plot e.g. it seems good to join Apr and Sep. We try different models:
-
-```{r Model 5, echo = TRUE}
+```{r, echo=TRUE}
 dat <- dat %>% 
+  filter(Month != "Nov") %>% 
+  mutate(MonthM2 = factor(Month, ordered = F)) %>% 
   mutate(MonthM4 = case_when(
     Month == "Apr" ~ "P3",
     Month == "May" ~ "P1",
@@ -173,240 +288,29 @@ dat <- dat %>%
     Month == "Sep" ~ "P2",
     Month == "Oct" ~ "P2",
   )) 
-  
-  
-testM <- function(mA, mB) {
-  mAN <- paste0("MonthM",mA)
-  mBN <- paste0("MonthM",mB)
-  modA <- eval(substitute(lm(log(Weight) ~ variable*log(Length), dat), list(variable = as.name(mAN))))
-  modB <- eval(substitute(lm(log(Weight) ~ variable*log(Length), dat), list(variable = as.name(mBN))))
-  anv <- anova(modA, modB) 
-  print(anv)
 
-  datP <- expand_grid(Length = 40:max(dat$Length), unique(dat[[mAN]]))
-  colnames(datP) = c("Length", mAN)
-  resA <- predict(modA, datP, interval='prediction', level=0.95) 
-  resA <- exp(resA)
-  resA <- resA %>% as_tibble() %>% mutate(Model = paste0("M",mA), ModelP = paste0("M",mA,"-",pull(datP[,2]))) 
-  resA <- bind_cols(datP, resA) %>% select(- !! mAN)
-  colnames(resA)[(ncol(resA)-4):(ncol(resA)-2)] <- c("Avg", "Lower", "Upper")
-  
-  datP <- expand_grid(Length = 40:max(dat$Length), unique(dat[[mBN]]))
-  colnames(datP) = c("Length", mBN)
-  resB <- predict(modB, datP, interval='prediction', level=0.95) 
-  resB <- exp(resB)
-  resB <- resB %>% as_tibble() %>% mutate(Model = paste0("M",mB), ModelP = paste0("M",mB,"-",pull(datP[,2]))) 
-  resB <- bind_cols(datP, resB) %>% select(- !! mBN)
-  colnames(resB)[(ncol(resB)-4):(ncol(resB)-2)] <- c("Avg", "Lower", "Upper")
-
-  res <- bind_rows(resA, resB)
-  ggplot(res, aes(x = Length, y = Avg)) + 
-    geom_line(aes(group = ModelP, color = ModelP, linetype = Model)) 
-  if (anv$Df[2] == 0) {
-    warning("Cannot do annova models!")
-    return(FALSE)
-  }
-  if (anv$`Pr(>F)`[2] > 0.05) {
-    if (which(anv$RSS == min(anv$RSS)) == 1) {
-      cat("Keep Model 2!\n")
-      # print(summary(modA)) 
-    } else {
-      cat("Keep Model a!\n")
-      # print(summary(modB))
-    } 
-    return(FALSE)
-  }
-  if (which(anv$RSS == min(anv$RSS)) == 1) {
-    cat("Model 1 best!\n")
-    # print(summary(modA)) 
-  } else {
-    cat("Model 2 best!\n")
-    # print(summary(modB))
-  } 
-  return(TRUE)
-}
-```
-
-We test the models against each other:
-
-```{r, echo = TRUE}
-testM(2,4)
-testM(2,5)
-testM(2,6)
-testM(6,5)
-```
-
-Model 5 seems to be best choice.
-
-
-
-
-
-
-
-# Salmon
-
-```{r Read}
-prefix <- "https://raw.githubusercontent.com/relund/skjern/master/data/"
-datCatchSalmon <- read_csv(paste0(prefix,"data_skjern_catch_salmon.csv")) %>% 
-  mutate(Month = month(Date, label = T), Quarter = paste0("Q",quarter(Date))) %>% 
-  arrange(Date)
-dat <- dplyr::filter(datCatchSalmon, Length > 39 & !is.na(Weight) & Killed)
-```
-
-We consider salmon catch records from Skjern Å from 2004 to present with both weight and length numbers. A total of `r nrow(dat)` observations:
-
-```{r}
-ggplot(dat, aes(x = Month)) + geom_bar(aes(y = (..count..)/sum(..count..))) + 
-    geom_text(aes(label = scales::percent(round((..count..)/sum(..count..),2)),
-                   y = (..count..)/sum(..count..)), stat= "count", vjust = -.5) 
-```
-
-Note we in fact don't have many observations from months where the qouta is closed. 
-
-## Model 1: log(Weight) ~ log(Length)
-
-Let us first try a simple model with [weight as function of length](https://en.wikipedia.org/wiki/Standard_weight_in_fish):
-
-```{r Model 1}
-mod1 <- lm(log(Weight) ~ log(Length), dat)
-summary(mod1)
-lim <- 40:max(dat$Length)
-res1 <- predict(mod1, data.frame(Length = lim), interval='prediction', level=0.95)
-res1 <- exp(res1)
-res1 <- res1 %>% as_tibble() 
-res1 <- res1 %>% add_column(Length = lim, .before = T)
-colnames(res1) <- c("Length", "Avg", "Lower", "Upper")
-res1 <- res1 %>% mutate(Fulton = Avg*100000/Length^3)
-res1L <- pivot_longer(res1, 2:4)
-pW <- ggplot(dat, aes(x = Length, y = Weight)) + 
-  geom_point(aes(color = Quarter), na.rm = T) + 
-  geom_line(aes(x = Length, y = value, linetype = name), data = res1L)  +
-  # guides(color=guide_legend(override.aes = list(shape=NA))) +
-  # scale_color_gradientn(colours = rainbow(4)) +
-  labs(title = "Model 1: log(Weight) ~ log(Length)", linetype = "Estimates") +
-  theme(legend.position="bottom") 
-pW
-```
-
-Note it is clear to see that the salmon arrive differently depending on size.
-
-The estimated formula for weight ($w$) of a seatrout as a funtion of length ($l$) becomes:
-
-$$ v = `r round(exp(mod1$coefficients[1]),8)` \cdot l^{`r round(mod1$coefficients[2],2)`}$$
-
-
-
-## Model 2: lm(log(Weight) ~ Month*log(Length)
-
-<!-- Let us have a closer look at the data: -->
-<!-- ```{r} -->
-<!-- res <- dat %>% mutate(Length = round(Length)) %>% group_by(Month, Length) %>% summarise(`Mean weight` = mean(Weight)) %>% arrange(Length) -->
-<!-- ggplot(res, aes(x = Month, y = `Mean weight`)) +  -->
-<!--   geom_line(aes(group = factor(Length), color = factor(Length)), na.rm = T) + -->
-<!--   labs(title = "Mean weight over months", color = "Length")  -->
-<!-- ``` -->
-
-<!-- It is hard to see when weights are highest. -->
-
-<!-- For medium lengths, weight goes up, peak and goes down again as expected. In March/April we still have kelts in the river and then fresh fish arrives (best condition/weight) which loose weight at they stay in the river. Note for small lengths (up to 50 cm) the difference is small; because, small fish may have other reasons than spawning for staying in the river (e.g. feeding or bad conditions in the fjord).  -->
-
-We fit a model taking month (a factor) into account:
-
-```{r Model 2}
-dat <- dat %>% mutate(MonthM2 = factor(Month, ordered = F))
+mod1 <- lm(log(Weight) ~ Sex*MonthM2*log(Length), dat)
 mod2 <- lm(log(Weight) ~ MonthM2*log(Length), dat)
+aictab(list(mod1, mod2))
 ```
 
-Note `mod1` is a nesteded model of `mod2` (the coefficient of each factor is the same). Hence we can do an ANOVA test:
+We fit model 2 without `sex` as a factor.
 
 ```{r}
-print(anova(mod1,mod2))
-```
-
-The models are  significant different. We choose `mod2 (the one with lowest RSS).
-
-
-```{r}
-summary(mod2)
-```
-
-```{r Model 2: plot}
-datP <- expand.grid(Length = 40:max(dat$Length), MonthM2 = unique(dat$MonthM2))
-res2 <- predict(mod2, datP, interval='prediction', level=0.95)
-res2 <- exp(res2)
-res2 <- res2 %>% as_tibble()
-res2 <- bind_cols(datP, res2) %>% as_tibble()
-colnames(res2) <- c("Length", "Month", "Avg", "Lower", "Upper")
+datP <- expand.grid(Length = 40:110, MonthM2 = unique(dat$MonthM2))
+res2 <- predict(mod2, datP, interval='prediction', level=0.95) %>% 
+  exp() %>% 
+  as_tibble() %>% 
+  add_column(datP) %>% 
+  rename("Avg" = "fit" , "Lower" = "lwr", "Upper" = "upr")
 ggplot(res2, aes(x = Length, y = Avg)) + 
-  geom_line(aes(group = Month, color = Month)) +
-  labs(title = "Model 2: log(Weight) ~ Month*log(Length)") +
+  geom_line(aes(color = MonthM2)) +
+  labs(title = "Model: log(Weight) ~ Month*log(Length)") +
   ylab("Weight") + theme(legend.position="bottom") + 
   scale_color_brewer(palette = "Set1")
+resL2 <- pivot_longer(res2, 1:3)
 ```
 
-Note the difference in weight is small up to 100 cm. 
-
-## Reducing Months
-
-Since the salmon may arrive to the river in different months, we may try to group some of the months. We test different models both with month as numeric and factor. Based on the above plot e.g. it seems good to join Apr and Sep. We try different models:
-
-
-```{r, echo = TRUE}
-dat <- dat %>% 
-  mutate(MonthM4 = case_when(
-    Month == "Apr" ~ "P3",
-    Month == "May" ~ "P1",
-    Month == "Jun" ~ "P1",
-    Month == "Jul" ~ "P2",
-    Month == "Aug" ~ "P3",
-    Month == "Sep" ~ "P4",
-    Month == "Oct" ~ "P5",
-  )) %>% 
-  mutate(MonthM5 = case_when(
-    Month == "Apr" ~ "P2",
-    Month == "May" ~ "P1",
-    Month == "Jun" ~ "P1",
-    Month == "Jul" ~ "P1",
-    Month == "Aug" ~ "P2",
-    Month == "Sep" ~ "P2",
-    Month == "Oct" ~ "P3",
-  )) %>% 
-  mutate(MonthM6 = case_when(
-    Month == "Apr" ~ "P2",
-    Month == "May" ~ "P1",
-    Month == "Jun" ~ "P1",
-    Month == "Jul" ~ "P1",
-    Month == "Aug" ~ "P1",
-    Month == "Sep" ~ "P1",
-    Month == "Oct" ~ "P2",
-  )) 
-```
-
-We test the models against each other:
-
-```{r, echo = TRUE}
-testM(2,4)
-testM(2,5)
-testM(2,6)
-```
-
-Model 2 seems to be best choice.
 
 
 
-<!-- ## Arrival over years -->
-
-<!-- Have the arrival of the salmon changed over years? We use mean weight as a indicator. -->
-
-<!-- ```{r} -->
-<!-- res <- dat %>% mutate(Year = year(Date)) %>% group_by(Month, Year) %>% summarise(`Mean weight` = mean(Weight)) -->
-<!-- ggplot(res, aes(x = Month, y = `Mean weight`)) +  -->
-<!--   geom_line(aes(group = Year, color = factor(Year)), na.rm = T) + -->
-<!--   labs(title = "Mean weight over months", color = "Length")  -->
-<!-- ggplot(res, aes(x = Year, y = `Mean weight`)) +  -->
-<!--   geom_line(aes(group = Month, color = Month), na.rm = T) + -->
-<!--   labs(title = "Mean weight over years", color = "Length")  -->
-<!-- ``` -->
-
-<!-- Based on the plots there don't seem to be a relation. -->
