--- a/reports/mv-lf/mv-lf-kort.Rmd
+++ b/reports/mv-lf/mv-lf-kort.Rmd
@@ -43,8 +43,8 @@ library(leaflet.extras)
 
 
 ```{r, include=FALSE}
-prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
-
+# prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
+prefix <- "../../data/"
 mapAddMarkers <- function(map, group, data) {
   if (nrow(data) == 0) return(map)
   map <- map %>% 
