--- a/reports/skjern/skjern-waterlevel.Rmd
+++ b/reports/skjern/skjern-waterlevel.Rmd
@@ -33,8 +33,8 @@ conflicts_prefer(
 source("../functions.R")
 Sys.setlocale("LC_ALL", "da_DK.UTF-8")
 
-prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
-# prefix <- "../../data/"
+# prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
+prefix <- "../../data/"
 # Water levels
 dat <- read_csv(paste0(prefix, "data_skjern_waterlevel_web.csv"),
            locale = locale(tz = "CET"),
