--- a/reports/skjern/skjern-lock-flow.Rmd
+++ b/reports/skjern/skjern-lock-flow.Rmd
@@ -35,8 +35,8 @@ source("../functions.R")
 
 Sys.setlocale("LC_ALL", "da_DK.UTF-8")
 
-prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
-# prefix <- "../../data/"
+# prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
+prefix <- "../../data/"
 # curYear <- if_else(month(now())*100 + day(now()) < 416, year(now())-1, year(now()))   # assume previous year until season starts
 
 
