--- a/reports/skjern/skjern-salmometer.Rmd
+++ b/reports/skjern/skjern-salmometer.Rmd
@@ -42,8 +42,8 @@ library(kableExtra)
 # library(fs)
 source("../functions.R")
 
-prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
-# prefix <- "../../data/"
+# prefix <- "https://raw.githubusercontent.com/relund/riverdata/master/data/"
+prefix <- "../../data/"
 # curYear <- if_else(month(now())*100 + day(now()) < 416, year(now())-1, year(now()))   # assume previous year until season starts
 
 # Weight - Estimates 
